# wce_graph

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  main_2.cpp  main_data_reduction.cpp
Testing/: components_1  components_2  components_3  data_clean.py  plots.ipynb  test_1_10.csv  test_1_11.csv  test_1_2.csv  test_1_3.csv  test_2_1.csv  test_2_2.csc  test_2_3.csv
Testing/results/: every_layer_1.csv  every_layer_2.csv  every_layer_3.csv  master_5layers_1.csv  master_5layers_2.csv  test_descriptions.txt
Testing/results_Ex4/: weighted_1500_1  weighted_1500_2  weighted_1500_3  weighted_2000_1  weighted_2000_2  weighted_2000_3
Testing/submit_best/: best_solv.csv  best_solv_action.csv  best_solv_real.csv  submit_solv.csv  submit_solv_action.csv  submit_solv_real.csv
cplex_solver/: Makefile  cplex_solver.cpp
include/: .gitignore  cluster_graph.h  personal_settings.h  utilFunctions.h  utils.cpp  utils.h
lib/: AbstractSolver.cpp  AbstractSolver.h  DeepSolver.cpp  DeepSolver.h  HeuristicSolver.cpp  HeuristicSolver.h  Solver.cpp  Solver.h  Solver2.cpp  Solver2.h  WCE_Graph.cpp  WCE_Graph.h  abstractSolver_P3Search.cpp  abstractSolver_dataReduction.cpp  dataReduction.cpp  deepSolver.cpp  graph.cpp  graph.h  heuristic.cpp  p3_search.cpp  parser.cpp  solver_P3Search.cpp  utils.cpp
presentations/exercise_1/: action.csv  presentation.aux  presentation.out  presentation.tex  random.csv  real.csv  result_action_sequence.csv  result_random.csv  result_real_world.csv
results/: solver5_action.csv  solver5_random.csv  solver5_real.csv
results/cplex_old/: cplex_solver_action.csv  (+6 more)
test_data/: a001.dimacs  test_data.txt
(+16 files in other folders)
